# Vectike

./: CMakeLists.txt  README.md  main.cpp
editor/: EditorFrame.cpp  editor-frame.cpp  editor-frame.h  editor-logic.cpp  editor-logic.h
imagebuilder/: Color.cpp  Drawable.cpp  Image.cpp  ImageBuilder.cpp  Transform.cpp  Vector.cpp  color.cpp  color.h  drawable.cpp  drawable.h  image-builder.cpp  image-builder.h  image.cpp  image.h  move-transform.cpp  rotate-transform.cpp  transform.cpp  transform.h  tvector.cpp  vector.cpp  vector.h
imagebuilder/drawables/: circle.cpp  circle.h  convex-polygon.cpp  convex-polygon.h  drawable.cpp  drawable.h  filled-circle.cpp  filled-circle.h  filled-convex-polygon.cpp  filled-convex-polygon.h  filled-polygon.cpp  filled-polygon.h  group.cpp  group.h  polygon.cpp  polygon.h  rounded-vector.cpp  rounded-vector.h  vector.cpp  vector.h
imagebuilder/math/: math-utils.cpp  math-utils.h  matrix.h  point.h
imagebuilder/transforms/: move-transform.cpp  move-transform.h  rotate-transform.cpp  rotate-transform.h  transform.cpp  transform.h
math/: matrix.cpp  matrix.h
